--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/lys0l/portfolio#readme",
   "dependencies": {
+    "all": "^0.0.0",
+    "axios": "^0.21.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1"
   }
